# sagemaker-cicd-poc

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cicd-model-poc-2.yml  cicd.yml  codeql.yml
.sisyphus/notepads/sagemaker-cicd-poc/: learnings.md
docker/: entrypoint.sh
docker/processing/: Dockerfile
docker/training/: Dockerfile
docs/: cicd-design.md  cicd-diagram.md  cicd-poc.md  cicd-tools-reference.md
docs/diags/: cicd-detail.d2  cicd-overview.d2  cicd-poc-detail.d2  cicd-poc-overview.d2
model-1/: config.json
model-1/training/: pipeline.py
model-1/training/artifacts/preprocessing/: main.py
model-2/: config.json
model-2/training/: pipeline.py
model-2/training/artifacts/preprocessing/: entrypoint.sh
model-3/: config.json
model-3/training/: pipeline.py
model-3/training/artifacts/training/: Dockerfile
model-4/: config.json
model-5/: config.json
model-5/training/artifacts/training/: main.py
model-5/training/artifacts/validation/: Dockerfile
model-poc/: config.json
model-poc-2/: config.json
model-poc-2/training/: pipeline.py
model-poc/training/: pipeline.py
model-poc/training/artifacts/preprocessing/: main.py
model-poc/training/artifacts/training/: main.py
model-poc/training/artifacts/validation/: main.py
scripts/: deploy_s3.py  update_config.py
{model-name}/training/: pipeline.py
